[COMCTL32] Revert "button: Don't erase the area of the checkbox or the text."

This reverts commit 0.4.12-dev-347-g
75a80ec82309a19632251bfe6aa9e7f14132a86f
by explcit request of Giannis Adamopoulos.

I double-checked and confirm, that
this revert fixes both regressions CORE-15595 & CORE-15696.
On the downside the revert will intensify again the regression CORE-13278
(will make the text flash again as well).

Giannis Adamopoulos mentioned earlier, that using double-buffering
eventually could be a valid way out of CORE-13278 instead.